@@ -1,3 +1,14 @@
+2016-03-11 Simon Pfreundschuh  <simonpf@chalmers.se>
+
+	* arts-2-3-459
+	
+	* src/matpackI.cc (mult):
+	Eliminated corner case when multiplying a transposed matrix with another
+	matrix that has only one column.
+
+	* src/test_matpack.cc (test_matrix_multiplication):
+	Fixed bug in tests that discarded error.
+
 2016-03-10 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-458
